# litestar-faststream

./: CLAUDE.md  README.md  TODO.md  prek.toml  pyproject.toml  pyrightconfig.json
.github/: actionlint.yaml  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: pr_automerge.yaml  pr_checks.yml  pr_labeler.yaml  pr_tests.yaml  sync_labels.yml
examples/confluent/: README.md  app.py  docker-compose.yml  smoke.sh  testing.py
examples/kafka/: README.md  app.py  smoke.sh  testing.py
examples/mqtt/: README.md  app.py  docker-compose.yml  smoke.sh  testing.py
examples/multiple_plugins_host/: README.md  app.py  docker-compose.yml  testing.py
examples/nats/: README.md  app.py  docker-compose.yml  smoke.sh  testing.py
examples/publish_only/: README.md  app.py
examples/rabbit/: README.md  app.py  docker-compose.yml  smoke.sh  testing.py
examples/redis/: README.md  app.py  docker-compose.yml  smoke.sh  testing.py
src/litestar_faststream/: __init__.py  _helpers.py  _otel_typing.py  asyncapi.py  cli.py  decorators.py  di.py  discovery.py  exceptions.py  hooks.py  host.py  info.py  instrumentation.py  lifespan.py  plugin.py
tests/integration/: test_base.py  test_confluent.py  test_kafka.py  test_mqtt.py  test_nats.py  test_rabbit.py  test_redis.py
tests/integration/asyncapi/: test_base.py  test_confluent.py  test_kafka.py  test_mqtt.py  test_nats.py  test_rabbit.py  test_redis.py
tests/unit/: test_asyncapi.py  test_brokers_registry.py  test_cli.py  test_context.py  test_decorators.py  test_di.py  test_discovery.py  test_enable_otel.py  test_exceptions.py  test_hooks.py  test_host_plugin.py  test_info.py  test_instrumentation.py  test_lifespan.py  test_plugin.py  test_public_api.py
