[project]
name = "litestar_faststream"
description = "Litestar integration for FastStream message brokers"
readme = "README.md"
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
license = "MIT"
version = "0.1.0"
keywords = [
    "asyncapi",
    "faststream",
    "framework",
    "kafka",
    "litestar",
    "message brokers",
    "mqtt",
    "nats",
    "rabbitmq",
    "redis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["faststream>=0.7.1", "litestar>=2.24.0", "typing_extensions>=4.0"]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]

[dependency-groups]
dev = [
    "creosote==5.2.0",
    "deptry==0.25.1",
    "dirty-equals==0.11",
    "faststream[rabbit,kafka,confluent,nats,redis]>=0.7.1,<0.8",
    "httpx==0.28.1",
    "import-linter==2.12",
    "litestar[standard]",
    "mypy==2.1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prek==0.4.6",
    "pytest-asyncio==1.4.0",
    "pytest==9.1.1",
    "PyYAML==6.0.3",
    "ruff==0.15.20",
    "ty==0.0.56",
    "zmqtt>=0.0.5; python_version >= '3.11'",
]

[project.urls]
Homepage = "https://github.com/hasansezertasan/litestar-faststream"
Source = "https://github.com/hasansezertasan/litestar-faststream"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "litestar_faststream"

[tool.ruff]
fix = true
output-format = "full"
preview = true
show-fixes = true
src = ["src", "tests"]
target-version = "py310"
unsafe-fixes = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true

[tool.ruff.lint]
ignore = [
    "ARG",
    "ANN401",
    "S101",
    "SLF001",
    "PLR0912",
    "PLR0913",
    "PLR2004",
    "E501",
    "C901",
    # preview
    "CPY",
    "PLC0415",
    "PLR6301",
    "RUF029",
    "RUF067",
    # pep8-naming
    "N817",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "DOC201",
    "BLE001",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# RUF076: autouse fixtures are intentional in tests (e.g. resetting module
# state between cases); the rule's blanket discouragement does not apply here.
"./tests/**/*.py" = ["ANN001", "PLC2701", "S101", "TC", "RUF076"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "tuple"
parametrize-values-type = "tuple"
parametrize-values-row-type = "tuple"


[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = false


[tool.ty.environment]
python-version = "3.10"


[tool.ty.terminal]
error-on-warning = true


[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
empty-body = "ignore"

[[tool.ty.overrides]]
include = ["src/litestar_faststream/plugin.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"


[tool.pyrefly]
disable-search-path-heuristics = true
disable-project-excludes-heuristics = true
project-excludes = [
    "**/.venv/**/*",
    "**/__pycache__",
    "**/node_modules",
    "**/venv/**/*",
]
project-includes = ["src", "tests"]
python-interpreter-path = ".venv/bin/python3"
python-version = "3.10"
search-path = [".", "src"]
use-ignore-files = false

[[tool.pyrefly.sub_config]]
matches = "tests/**"

[tool.pyrefly.sub_config.errors]
missing-attribute = false
bad-argument-type = false
no-matching-overload = false


[tool.mypy]
# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
check_untyped_defs = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "prop-decorator",
    "return-value",
    "type-arg",
]
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src", "tests"]
mypy_path = ["src"]
no_implicit_optional = true
pretty = true
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false


[tool.vulture]
exclude = ["*/.venv/*.py"]
ignore_names = ["cls", "start", "test_broker", "TracebackType"]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true


[tool.importlinter]
root_package = "litestar_faststream"
include_external_packages = true

[[tool.importlinter.contracts]]
# Tests and runtime code must stay decoupled in the import graph.
name = "src does not import tests"
type = "forbidden"
source_modules = ["litestar_faststream"]
forbidden_modules = ["tests"]


[tool.deptry]
known_first_party = ["litestar_faststream"]
extend_exclude = ["examples"]

[tool.deptry.per_rule_ignores]
# Transitive deps that are stable parts of Litestar/FastStream's public surface.
DEP003 = ["click", "nats", "redis"]
# zmqtt is needed at import-time by the MQTT integration but only ships in the
# dev group today; extras are tracked separately.
# opentelemetry-{api,sdk} are declared under the [otel] optional extra; the
# main code imports them inside ``try/except ImportError`` (see ``_otel_typing``).
DEP002 = ["opentelemetry-api", "opentelemetry-sdk"]
DEP004 = ["zmqtt", "opentelemetry"]


[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B106", "B311", "B413", "B608"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests", "examples"]
python_files = ["test_*.py", "testing.py"]
markers = ["rabbit", "kafka", "confluent", "nats", "redis", "mqtt"]
asyncio_default_fixture_loop_scope = "function"
